intégration ui.router et création de routes

--- a/src/main/webapp/views/main.html
+++ b/src/main/webapp/views/main.html
@@ -1,3 +1,8 @@
-<div ng-show="is_backend_ready">
-	<p>Hello Main</p>
-</div>
+<section id="welcome">
+	<div class="jumbotron text-center">
+	    <h1>Bienvenue sur l'application TropTard !</h1>
+	    <p>Le principe est simple, plus vous manquez vos événements favoris, plus vous gagnez !</p>
+	    <p>Ne perdez plus de temps, connectez-vous !</p> 
+	    <button type="button" class="btn btn-default" id="signinButton" ng-click="auth()">Se connecter</button>
+	</div>
+</section>
