--- a/src/main/webapp/views/navbaruser.html
+++ b/src/main/webapp/views/navbaruser.html
@@ -1,8 +1,8 @@
-<div class="navbar-collapse">
+<nav class="navbar-collapse">
   <ul class="nav navbar-nav pull-left">
-    <li><a ui-sref="#"><span class="glyphicon glyphicon-wrench"></span> Préférences</a></li>
+    <li><button type="button" class="btn btn-default navbar-btn"><span class="glyphicon glyphicon-wrench"></span> Préférences</button></li>
   </ul>
   <ul class="nav navbar-nav pull-right">
-    <li><a ng-click="auth()"><span class="glyphicon glyphicon-user"></span> Profil</a></li>
+    <li><button type="button" class="btn btn-default navbar-btn" ng-click="auth()"><span class="glyphicon glyphicon-user"></span> Se déconnecter</button></li>
   </ul>
-</div>
+</nav>
