mise en place menu  pour mobile

--- a/src/main/webapp/views/navbaruser.html
+++ b/src/main/webapp/views/navbaruser.html
@@ -1,4 +1,4 @@
-<nav class="navbar-collapse">
+<nav class="collapse navbar-collapse" id="navbar-user">
   <ul class="nav navbar-nav pull-left">
     <li><button type="button" class="btn btn-default navbar-btn"><span class="glyphicon glyphicon-wrench"></span> Préférences</button></li>
   </ul>
