--- a/src/main/webapp/views/main.html
+++ b/src/main/webapp/views/main.html
@@ -1,8 +1,9 @@
-<section id="welcome">
-	<div class="jumbotron text-center">
-	    <h1>Bienvenue sur l'application TropTard !</h1>
-	    <p>Le principe est simple, plus vous manquez vos Ã©vÃ©nements favoris, plus vous gagnez !</p>
-	    <p>Ne perdez plus de temps, connectez-vous !</p> 
-	    <button type="button" class="btn btn-default" id="signinButton" ng-click="auth()">Se connecter</button>
-	</div>
-</section>
+<header id="welcome">
+    <div class="container">
+        <div class="intro-text">
+        	<div class="intro-heading">Bienvenue sur l'application CiTropTard !</div>
+            <div class="intro-lead-in">Le principe est simple, plus vous manquez vos événements favoris, plus vous gagnez ! <br>Ne perdez plus de temps, connectez-vous !</div>
+            <button type="button" href="#services" class="page-scroll btn btn-xl" id="signinButton" ng-click="auth()">Se connecter</button>
+        </div>
+    </div>
+</header>
