renommage code source preferences en portfolio

--- a/src/main/webapp/views/events.html
+++ b/src/main/webapp/views/events.html
@@ -111,7 +111,7 @@
 
     <!-- Les deux couleurs a utilisé pour savoir si le centre d'interet est selectionné sont : #e96656 et #7CC576 -->
     <!-- Préférences -->
-    <div class="portfolio-modal modal fade bg-light-gray" id="preferences" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade bg-light-gray" id="portfolio" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <!-- <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
