--- a/src/main/webapp/styles/troptardmiage.css
+++ b/src/main/webapp/styles/troptardmiage.css
@@ -123,7 +123,7 @@ footer .col-md-4 a{
     }
 }
 
-#preferences .timeline-heading h4{
+#portfolio .timeline-heading h4{
 	border-bottom:1px solid #fed136;
 	text-align:left;
 	margin:0 15px 10px 15px;
@@ -142,11 +142,11 @@ div h3.section-subheading {
     margin-bottom: 0px;
 }
 
-#preferences .portfolio-item .portfolio-caption {
+#portfolio .portfolio-item .portfolio-caption {
     background-color: #f1f1f1;
 }
 
-#preferences .btn-close, .confirm-event .btn-close{
+#portfolio .btn-close, .confirm-event .btn-close{
 	margin-right:30px !important;
 }
 
