--- a/src/main/webapp/styles/troptardmiage.css
+++ b/src/main/webapp/styles/troptardmiage.css
@@ -151,9 +151,18 @@ div h3.section-subheading {
 }
 
 .portfolio-caption{
-	min-height:88px;
+	  width: 165px;
+	  height: 88px;
+	  line-height: 88px;
+	  text-align: center;
+	  padding:0px 5px 10px 5px !important;
 }
 
+.portfolio-caption>h4{
+	margin: auto;
+  	vertical-align: middle;
+  	display: inline-block;
+}
 .portfolio-link{
 	min-height:165px;
 }
