--- a/src/main/webapp/views/navbaruser.html
+++ b/src/main/webapp/views/navbaruser.html
@@ -11,6 +11,7 @@
         </li>
         <li>
             <a class="btn btn-link" ng-click="auth()">Se déconnecter</a>
+            <img class="img-circle img-responsive userpicture" ng-src="{{userpicture}}"/>
         </li>
     </ul>
 </div>
