--- a/src/main/webapp/views/navbaruser.html
+++ b/src/main/webapp/views/navbaruser.html
@@ -1,5 +1,5 @@
 <div class="collapse navbar-collapse" id="navbar-user">
-    <ul class="nav navbar-nav navbar-right">
+    <ul class="nav navbar-nav navbar-right bar-user">
         <li class="hidden">
             <a href="#page-top"></a>
         </li>
@@ -9,7 +9,7 @@
         <li>
             <a class="btn btn-link" href="#portfolio" data-toggle="modal">Préférences</a>
         </li>
-        <li>
+        <li class="icon-deconnexion">
             <a class="btn btn-link" ng-click="auth()">Se déconnecter</a>
             <img class="img-circle img-responsive userpicture" ng-src="{{userpicture}}"/>
         </li>
