--- a/src/main/webapp/styles/troptardmiage.css
+++ b/src/main/webapp/styles/troptardmiage.css
@@ -82,8 +82,11 @@ footer .col-md-4 a{
 	margin-bottom:7px;
 }
 
-.icon-deconnexion a{
-	float:left !important;
+.icon-deconnexion img {
+	float:right !important;
+}
+.icon-deconnexion a {
+    float: left !important;
 }
 
 @media(min-width:768px) {
