--- a/src/main/webapp/views/events.html
+++ b/src/main/webapp/views/events.html
@@ -6,6 +6,7 @@
                     <h2 class="section-heading text-center">Événements</h2>
                     <h3 class="section-subheading text-muted text-center">Vous trouverez tous les événements qui pourraient vous intéresser !<br/>Inscrivez-vous et vous recevrez une notification la veille de l'événement.</h3>
 
+                    <p ng-show="events.length == 0" class="text-info text-center">Choisissez vos préférences et nous vous proposerons des événements !</p>
                     <ul class="timeline" ng-repeat="event in events">
                         <li>
                             <div class="timeline-image">
@@ -34,32 +35,15 @@
                     <h3 class="section-subheading text-muted text-center titre-high-score">Plus vous grimpez dans le classement en ratant les événements, plus vous êtes un loser ! </h3>
                     <button type="button" class="btn btn-primary center-block" ng-click="loadLosers()"><i class="fa fa-refresh"></i></button>
 
-                    <ul class="high-score" ng-repeat="(key, percentage) in losers">
+                    <ul class="high-score" ng-repeat="(key, percentage) in losers | limitTo:3">
                         <li>
-                            <img src="styles/img/citron-1.png">
+                            <img ng-src="styles/img/citron-{{$index + 1}}.png">
                                 <span>
                                     <h4 class="subheading titre-min-cent" ng-bind="key"></h4><br/>
                                     <p class="text-muted"><span ng-bind="percentage"></span> % d'événements ratés</p>
                                 </span>
 
                         </li>
-                       <!--  <li>
-                            <img src="styles/img/citron-2.png">
-                            <span>
-                                <h4 class="subheading titre-min-cent">Paul-Jakez Bocéno</h4><br/>
-                                <span class="text-muted">85% d'événements ratés</span>
-                            </span>
-
-                        </li>
-
-                        <li>
-                            <img src="styles/img/citron-3.png">
-                            <span>
-                                <h4 class="subheading titre-min-cent">Margot Bernard</h4><br/>
-                                <span class="text-muted">82% d'événements ratés</span>
-                            </span>
-
-                        </li> -->
                     </ul>
                 </div>
             </div>
