gestion des préférences déjà en place

--- a/src/main/webapp/styles/troptardmiage.css
+++ b/src/main/webapp/styles/troptardmiage.css
@@ -185,6 +185,9 @@ div h3.section-subheading {
   	display: inline-block;
 }
 
+.selected-theme {
+    background-color: #7CC576 !important;
+}
 
 
 .navbar-black{
