--- a/src/main/webapp/views/navbaruser.html
+++ b/src/main/webapp/views/navbaruser.html
@@ -7,7 +7,7 @@
             <a class="page-scroll" href="#events">Événements</a>
         </li>
         <li>
-            <a class="btn btn-link" href="#portfolio" data-toggle="modal">Préférences</a>
+            <a class="btn btn-link" href="#portfolio" data-toggle="modal" ng-click="preSelectThemes()">Préférences</a>
         </li>
         <li class="icon-deconnexion">
             <a class="btn btn-link" ng-click="auth()">Se déconnecter</a>
