--- a/src/main/webapp/views/confirmevent.html
+++ b/src/main/webapp/views/confirmevent.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
        		<div class="col-lg-12">
-                <h2 class="section-heading text-center">votre événement</h2>
+                <h2 class="section-heading text-center">Votre événement</h2>
                 <h3 class="section-subheading text-muted text-center">Êtes-vous sûr de vouloir participer à cet événement ? </h3>
 
                 <ul class="timeline">
